# phi4-ligand

./: .gitignore  INSTALL.md  README.md  pyproject.toml
samples/: B49_ligandl.sdf
samples/benchmarks/: benchmark_report.md  benchmark_report.tsv  selection_manifest.tsv  tmp_p00533kd_ire_g719s_2ito.md  tmp_p00533kd_ire_g719s_2ito.tsv  tmp_p00533kd_ire_g719s_t790m.md  tmp_p00533kd_ire_g719s_t790m.tsv  tmp_p00533kd_ire_wt_2ity.md  tmp_p00533kd_ire_wt_2ity.tsv  tmp_p10721kd_b49ct_d816h.md  tmp_p10721kd_b49ct_d816h.tsv  tmp_p10721kd_b49ct_d816v.md  tmp_p10721kd_b49ct_d816v.tsv  tmp_p10721kd_b49ct_v560d.md  tmp_p10721kd_b49ct_v560d.tsv  tmp_p10721kd_b49ct_v560d_t670i.md  tmp_p10721kd_b49ct_v560d_t670i.tsv  tmp_p10721kd_b49ct_wt_3g0e.md  tmp_p10721kd_b49ct_wt_3g0e.tsv
samples/benchmarks/p00533kd_ire_g719s-t790m_3ug2-37b13a047214/: ligand.sdf
samples/benchmarks/p00533kd_ire_g719s_2ito-cb7bd10e047f/: ligand.sdf
samples/benchmarks/p00533kd_ire_wt_2ity-bdc25ac7f373/: ligand.sdf
samples/benchmarks/p10721kd_b49ct_d816h_3g0f-91ef6b9ccc4b/: ligand.sdf
samples/benchmarks/p10721kd_b49ct_d816v-5e237c989423/: ligand.sdf
samples/benchmarks/p10721kd_b49ct_v560d-b10a61086766/: ligand.sdf
samples/benchmarks/p10721kd_b49ct_v560d-t670i-1bab0d852355/: ligand.sdf
samples/benchmarks/p10721kd_b49ct_wt_3g0e-d9d2a615a73c/: ligand.sdf
scripts/: bootstrap.sh  run_benchmarks.py  run_score.sh
src/psi4_ligands/: __init__.py  binding.py  cli.py
